Camino only - Bug 328737: Destination should be consistently remembered when saving bookmarks. Patch by hwaara <hwaara@gmail.com>  and cl <bugzilla@chrislawson.net>. r=smorgan sr=pink