camino/src/application/UserDefaults.h
@@ -44,9 +44,10 @@
 */
 
 
-#define USER_DEFAULTS_URL_KEY                   @"url"                         /* String */
-#define USER_DEFAULTS_HIDE_PERS_TOOLBAR_KEY     @"Hide Personal Toolbar"       /* Integer */
-#define USER_DEFAULTS_HOMEPAGE_KEY              @"HomePage"                    /* String */
-#define USER_DEFAULTS_AUTOCOMPLETE_WHILE_TYPING @"Autocomplete While Typing"   /* Boolean */
-#define USER_DEFAULTS_CONTAINER_SPLITTER_WIDTH  @"Bookmarks Splitter position" /* Float */
+#define USER_DEFAULTS_URL_KEY                   @"url"                           /* String */
+#define USER_DEFAULTS_HIDE_PERS_TOOLBAR_KEY     @"Hide Personal Toolbar"         /* Integer */
+#define USER_DEFAULTS_HOMEPAGE_KEY              @"HomePage"                      /* String */
+#define USER_DEFAULTS_AUTOCOMPLETE_WHILE_TYPING @"Autocomplete While Typing"     /* Boolean */
+#define USER_DEFAULTS_CONTAINER_SPLITTER_WIDTH  @"Bookmarks Splitter position"   /* Float */
+#define USER_DEFAULTS_LAST_SELECTED_BM_FOLDER   @"Last Selected Bookmark Folder" /* String */
 
